--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -205,7 +205,7 @@
     "CustomPlace": "请输入你要捐助的金额",
     "CurrencySymbol": "￥",
     "Thank": "感谢",
-    "ThankContent": "谢谢你朋友，你的好意我心领了，不必真的捐赠给我。\n\n希望你每天能过得充实，并且记录下自己的生活，当老的一天还能看到，这就是我制作这款软件的初衷。"
+    "ThankContent": "谢谢你朋友，好意我心领了，所以不必真的捐赠给我。\n\n希望你每天能玩得开心，过得愉快。如果能记录下自己的生活与感受，那就更好了。\n\n当你老的一天，看着以前的日记，回忆自己的一生，少年时欢声笑语，青年时年少轻狂，中年时家庭和睦，也算不枉此生了。\n\n这就是我制作这款软件的初衷。\n\n开发者：Yu-Core"
   },
   "FunctionalDescription": "功能说明",
   "ErrorHandle": {
