🆕 feat: add detect updates

--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -437,5 +437,11 @@
     "Start time": "起始时间",
     "End time": "终止时间"
   },
-  "QQGroup": "QQ交流群"
+  "QQGroup": "QQ交流群",
+  "VersionUpdate": {
+    "LatestVersionUrl": "https://gitee.com/api/v5/repos/Yu-core/SwashbucklerDiary/releases/latest",
+    "No updates": "当前已是最新版本",
+    "Need updates": "检测到最新版本，是否前往更新？",
+    "Check failed": "检测失败，原因未知"
+  }
 }
