--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -437,5 +437,11 @@
     "Start time": "Start time",
     "End time": "End time"
   },
-  "QQGroup": "QQ Group"
+  "QQGroup": "QQ Group",
+  "VersionUpdate": {
+    "LatestVersionUrl": "https://api.github.com/repos/Yu-Core/SwashbucklerDiary/releases/latest",
+    "No updates": "Currently the latest version",
+    "Need updates": "Detected the latest version, do you want to proceed to update?",
+    "Check failed": "Detection failed for unknown reason"
+  }
 }
