--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -291,6 +291,11 @@
     }
   },
   "Setting": {
+    "General": {
+      "Name": "通用",
+      "Permission": "系统权限",
+      "Storage": "存储空间"
+    },
     "Diary": {
       "Name": "日记",
       "Title": "标题",
@@ -309,8 +314,7 @@
       "SetPassword": "设置密码",
       "ValidatePassword": "验证密码",
       "PasswordError": "密码错误",
-      "NotSetPassword": "未设置密码",
-      "Permission": "系统权限"
+      "NotSetPassword": "未设置密码"
     },
     "Display": {
       "Name": "显示",
@@ -451,11 +455,11 @@
   },
   "lanSender": {
     "List of available devices": "可用设备列表",
-    "Searching for available devices": "正在寻找可用设备。。。",
+    "Searching for available devices": "正在寻找可用设备...",
     "There are currently no available devices": "暂无可用设备",
     "No network connection": "没有网络连接"
   },
   "lanReceiver": {
-    "Waiting for connection": "等待连接中。。。"
+    "Waiting for connection": "等待连接中..."
   }
 }
