🐛 fix: Text wrong

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -505,6 +505,7 @@
       "Path": "Export / Local export / Export",
       "Subtitle": "Save as txt, md, json, PDF type files",
       "Success": "Export success",
+      "Fail": "Export fail",
       "SelectType": "Select export file type"
     },
     "Import": {
