--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -503,7 +503,7 @@
     "Export": {
       "Title": "导出",
       "Path": "导出 / 本地导出 / 导出",
-      "Subtitle": "保存为txt、md、json、pdf等格式文件",
+      "Subtitle": "保存为txt、md、json生成的zip压缩包",
       "Success": "导出成功",
       "Fail": "导出失败",
       "SelectType": "选择导出文件格式"
@@ -511,7 +511,7 @@
     "Import": {
       "Title": "导入",
       "Path": "导出 / 本地导出 / 导入",
-      "Subtitle": "导入json文件",
+      "Subtitle": "导入json生成的zip压缩包",
       "Success": "导入成功",
       "Fail": "导入失败",
       "ConfirmImport": {
