🆕 feat: add Image Manage

--- a/SwashbucklerDiary/wwwroot/i18n/en-US.json
+++ b/SwashbucklerDiary/wwwroot/i18n/en-US.json
@@ -360,6 +360,11 @@
       "EditCreateTime": {
         "Name": "Edit date",
         "Path": "Setting / Edit date"
+      },
+      "Image": {
+        "Name": "Image Manage",
+        "Path": "Setting / Image Manage",
+        "DeleteUnusedImage": "Are you sure to delete unused images?"
       }
     },
     "Safe": {
