--- a/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
+++ b/SwashbucklerDiary/wwwroot/i18n/zh-CN.json
@@ -405,6 +405,10 @@
       "DiaryCardIcon": {
         "Name": "日记卡片图标",
         "Path": "设置 / 首页日期"
+      },
+      "Alert": {
+        "Name": "提示设置",
+        "Paht": "设置 / 提示设置"
       }
     }
   },
@@ -583,5 +587,8 @@
   },
   "SearchAppFunction": {
     "Placeholder": "请输入想要搜索的功能"
+  },
+  "Alert": {
+    "AlertTimeout": "提示时长"
   }
 }
